objects/GP_ACCUMULATION_RECHARGE__c.object
<CustomObject>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSISDN__c</fullName>
        <label>MSISDN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto__c</fullName>
        <label>Monto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suscripcion__c</fullName>
        <label>Suscripción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Cliente__c</fullName>
        <label>Tipo de Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GP ACCUMULATION RECHARGE</label>
    <nameField>
        <label>GP ACCUMULATION RECHARGE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP ACCUMULATION RECHARGES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>